--- a/win/dbn.vcxproj
+++ b/win/dbn.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="..\src\utils.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\res\resource.h" />
     <ClInclude Include="..\src\code_generator.h" />
     <ClInclude Include="..\src\code_optimizer.h" />
     <ClInclude Include="..\src\compiler.h" />
@@ -131,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\res\resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\res\icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
