--- a/win/dbn.vcxproj.filters
+++ b/win/dbn.vcxproj.filters
@@ -83,10 +83,14 @@
     <ClInclude Include="..\src\utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\res\resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\res\resource.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\res\icon.ico" />
   </ItemGroup>
 </Project>
